# chidi-ai

./: .gitignore  README.md  docker-compose.yml
chidi-backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml
chidi-backend/services/api-gateway/: Dockerfile  pyproject.toml
chidi-backend/services/api-gateway/app/: .dockerignore  README.md  __init__.py  main.py
chidi-backend/services/api-gateway/app/routers/: users.py
chidi-backend/shared/auth/: dependencies.py  jwt_handler.py
chidi-backend/shared/database/: README.md  connection.py  models.py
chidi-backend/shared/database/migrations/: env.py
chidi-backend/shared/database/migrations/versions/: 001_initial_schema.py  002_add_settings_column.py
chidi-frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
chidi-frontend/src/app/: globals.css  layout.tsx  page.tsx
chidi-frontend/src/app/(auth)/login/: page.tsx
chidi-frontend/src/app/(auth)/signup/: page.tsx
chidi-frontend/src/app/auth/callback/: route.ts
chidi-frontend/src/app/auth/login/: page.tsx
chidi-frontend/src/app/auth/signup/: page.tsx
chidi-frontend/src/features/auth/components/: LoginForm.tsx  SignupForm.tsx
chidi-frontend/src/features/auth/hooks/: useAuth.ts
chidi-frontend/src/lib/supabase/: client.ts
project-files/: notes.txt  style-guide.md  task-plan.md  tech-spec.md
